--- a/css/styles.css
+++ b/css/styles.css
@@ -178,3 +178,9 @@
 .work .container .row .col-lg-7 div {
   width: 323px;
 }
+/*========================Work Section===========================*/
+.project {
+  background-color: #ffffff;
+  padding-top: 128px;
+  padding-bottom: 128px;
+}
