--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
-.container {
+/* .container {
   width: 1280px !important;
-}
+} */
 
 .common-title h2 {
   font-family: "Poppins", sans-serif;
@@ -31,6 +31,15 @@ h2 {
   font-weight: 500;
   color: #282938;
   line-height: 48px;
+}
+.projects .container .row .col-lg-8 .overlay h3,
+.projects .container .row .col-lg-4 .top-img .overlay h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  color: #fff;
+  line-height: 36px;
+  margin-top: 32px;
 }
 /*================================================*/
 .navbar {
@@ -222,6 +231,7 @@ h2 {
   top: 0;
   left: 0;
 }
+/*----------------------------------------------------------*/
 .projects .container .row .col-lg-8 .overlay h3,
 .projects .container .row .col-lg-4 .top-img .overlay h3 {
   font-family: "Poppins", sans-serif;
@@ -281,36 +291,45 @@ h2 {
   padding-top: 128px;
   padding-bottom: 128px;
 }
+
 .features .container .common-title h4 {
   margin-bottom: 12px;
   text-align: center;
 }
+
 .features .container .common-title h2 {
   margin-bottom: 47px;
   text-align: center;
 }
+
 .features .container .common-title h2 span {
   display: block;
-}
-.features .row {
-}
-.features .row .col-lg-4 {
-  /*flex: 1 1 calc(33.333% - 32px);  তিন কলাম নিশ্চিত করা */
-  /* max-width: calc(33.333% - 32px); তিন কলাম ঠিক রাখা*/
-  padding: 58px 32px 48px 48px;
-  background-color: rgba(255, 255, 255, 1);
-  box-sizing: border-box;
-}
-.features .row .col-lg-4 img {
-  margin-bottom: 22px;
 }
 
 .features .row {
   display: flex;
   flex-wrap: wrap;
-  gap: 32px; /* কলাম এবং রোতে গ্যাপ */
+  row-gap: 24px; /* দুই রো এর মাঝে 24px গ্যাপ */
 }
-.features .row .col {
-  flex: 1 1 calc(33.333% - 32px);
-  max-width: calc(33.333% - 32px);
+
+.feature-box {
+  padding: 0 16px; /* দুই পাশে 16px করে গ্যাপ, মোট 32px */
+}
+
+.features .feature {
+  padding: 58px 32px 48px 48px;
+  background-color: rgba(255, 255, 255, 1);
+  box-sizing: border-box;
+}
+.features .feature p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+}
+.features .feature p span {
+  display: block;
+}
+
+.features .feature img {
+  margin-bottom: 22px;
 }
