--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,9 @@ h2 {
   line-height: 36px;
   margin-top: 32px;
 }
+span {
+  display: block;
+}
 /*================================================*/
 .navbar {
   background-color: #1c1e53;
@@ -255,6 +258,9 @@ h2 {
   display: inline-block;
   color: #fcd980;
 }
+/* .projects .container .row .col-lg-4 {
+  background-color: #ffffff;
+} */
 .projects .container .row .col-lg-4 .side-img {
   position: relative;
   overflow: hidden;
@@ -318,7 +324,7 @@ h2 {
 
 .features .feature {
   padding: 58px 32px 48px 48px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(244, 246, 252, 1);
   box-sizing: border-box;
 }
 .features .feature p {
@@ -332,4 +338,63 @@ h2 {
 
 .features .feature img {
   margin-bottom: 22px;
+}
+/*========================features Section===========================*/
+.clients {
+  background-color: rgba(244, 246, 252, 0.5);
+  padding-top: 128px;
+  padding-bottom: 128px;
+}
+.clients .container .row .col-md-4 .common-title h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 38px;
+  font-weight: 600;
+  color: #282938;
+  line-height: 56px;
+  margin-bottom: 0;
+}
+.clients .container .row .col-md-8 .autoer {
+  margin-top: 48px;
+}
+.clients .container .row .col-md-8 .common-title h3 {
+  line-height: 48px;
+}
+.clients .container .row .col-md-8 .autoer img {
+  float: left;
+  border-radius: 50%;
+  margin-right: 14px;
+}
+.clients .container .row .col-md-8 .autoer h3 {
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #282938;
+  line-height: 32px;
+  margin-bottom: 0;
+}
+.clients .container .row .col-md-8 .autoer p {
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #282938;
+  line-height: 28px;
+  margin-top: 0;
+}
+.clients .container .row .col-md-8 .slider .icon-box {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: transparent;
+}
+.clients .container .row .col-md-8 .slider .icon-box i {
+  color: #282938 !important;
+}
+.clients .container .row .col-md-8 .slider .icon-box:hover {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: #5239fa;
+}
+.clients .container .row .col-md-8 .slider .icon-box:hover i {
+  color: #fff !important;
 }
