--- a/css/styles.css
+++ b/css/styles.css
@@ -441,96 +441,67 @@ span {
 }
 
 /* ===============================stellar================================*/
-
 .stellar .container {
-  height: 691px;
-  display: flex;
+  background-color: #1c1e53;
 }
 
-.stellar .container .content_container {
+.stellar .container .row .col-lg-6 {
+  padding: 0;
   position: relative;
 }
-.stellar .container p {
-  color: white;
-}
-.stellar .container .content_container .overly {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: auto;
-  background: rgba(28, 30, 83, 0.5);
-  padding: 96px 96px 261px 96px;
-}
 
-.stellar .container .content_container .overly .title {
-  color: white;
+.stellar .container .row .col-lg-6 > .overly {
+  width: 100%;
+  height: 100%;
+  padding: 96px 96px 0 96px;
+  position: absolute;
+  top: 0px !important;
+  background: rgba(28, 30, 83, 0.5);
+}
+.stellar .container .row .col-lg-6 .overly h2 {
+  font-size: 54px;
   line-height: 74px;
   margin-bottom: 24px;
 }
-
-.stellar .container .content_container .overly .description {
+.stellar .container .row .col-lg-6 p {
   color: white;
-}
-.stellar .container .content_container .overly h2 {
-  font-size: 54px;
-}
-.stellar .container .content_container .overly span {
-  display: block;
-}
-.stellar .container .inquiry_input {
-  height: 100%;
-  width: 100%;
-  background: #1c1e53;
-  padding: 96px 96px 261px 96px;
-}
-
-.stellar .container .inquiry_input .sub-title {
-  font-size: 32px;
+  font-size: 16px;
   font-weight: 500;
-  line-height: 48px;
+}
+.stellar .container .row .col-lg-6:last-child {
+  padding: 96px 96px 0 96px;
+}
+.stellar .container .row .col-lg-6:last-child p {
+  margin-bottom: 40px;
+}
+.stellar .container .row .col-lg-6 h2 {
   color: white;
 }
-
-.stellar .container .inquiry_input .description {
-  color: white;
-  margin-top: 8px;
-  margin-bottom: 48px;
-}
-
-.stellar .container .inquiry_input .form-inputs {
-  background: transparent;
-  border: 2px solid #ffffff0d;
-  padding: 18px 311px 18px 32px !important;
+.stellar .container .row .col-lg-6 form input {
+  background-color: transparent;
+  width: 100%;
+  display: block;
   border-radius: 8px;
-  color: white;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  padding-left: 32px;
   margin-bottom: 16px;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  color: white;
 }
-
-.stellar .container .inquiry_input .form-inputs::placeholder {
+.stellar .container .row .col-lg-6 form input::placeholder {
   color: rgba(244, 246, 252, 0.5);
   font-size: 16px;
   font-weight: 400;
   line-height: 28;
 }
-
-.stellar .container .inquiry_input .form-inputs:focus {
-  border-color: #ffffffbb !important;
-}
-.stellar .container .inquiry_input .navbar-button {
+.stellar .container .row .col-lg-6 .navbar-button a {
   margin-top: 39px;
-}
-.stellar .container .inquiry_input .navbar-button a {
   width: 100%;
   text-align: center;
 }
-.stellar .container .inquiry_input .common-title {
-  text-align: center;
-}
-.stellar .container .inquiry_input .common-title a {
+.stellar .container .row .col-lg-6 .common-title {
   margin-top: 28px;
-  display: inline-block;
-  color: #fcd980;
 }
 /*========================our_blog Section===========================*/
 .our_blog {
